cluster-a/patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: app
  annotations:
    kubernetes.io/elb.class: performance
    kubernetes.io/elb.autocreate: '{
      "name": "cluster-a",
      "type": "public",
      "bandwidth_name": "cluster-a-bandwidth",
      "bandwidth_chargemode": "traffic",
      "bandwidth_size": 300,
      "bandwidth_sharetype": "PER",
      "eip_type": "5_bgp",
      "available_zone": [
         "ap-southeast-3a",
         "ap-southeast-3e"
      ],
      "l4_flavor_name": "L4_flavor.elb.s1.small"
     }'
    kubernetes.io/elb.lb-algorithm: ROUND_ROBIN
