cluster-a/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app
  annotations:
    kubernetes.io/elb.class: performance
    kubernetes.io/elb.port: '80'
    kubernetes.io/elb.autocreate: '{
      "name": "cluster-a",
      "type": "public",
      "bandwidth_name": "cluster-a-bandwidth",
      "bandwidth_chargemode": "traffic",
      "bandwidth_size": 300,
      "bandwidth_sharetype": "PER",
      "eip_type": "5_bgp",
      "available_zone": [
         "ap-southeast-2b",
         "ap-southeast-2c"
      ],
      "l7_flavor_name": "L7_flavor.elb.s1.small"
     }'
